<resources>
    <string name="app_name">Scan Go</string>
    <string name="image">Image</string>
    <string name="remove_item">Remove Item</string>
    <string name="Rs">\u20B9 %1$s</string>
    <string name="scan_item">Scan Item</string>
    <string name="cart">Cart</string>
    <string name="checkout">Checkout</string>
    <string name="no_items_added">Your scan &amp; go cart is empty!</string>
    <string name="suggestion_text">Tap the scan button to start shopping.</string>
    <string name="make_payment">Make Payment</string>
    <string name="total_price">Total price: %1$s</string>
    <string name="item_found">Item added successfully.</string>
    <string name="error_str">Sorry!Something went wrong.</string>
    <string name="quantity">X %1$s</string>
    <string name="add_item_text">Add an item to cart</string>
    <string name="total">Total: $%1$s</string>
    <string name="summary">Summary</string>
    <string name="exit_message">Are you sure to exit from app?</string>
    <string name="exit_app">Exit App</string>
    <string name="exit">Exit</string>
</resources>